1. 整合了SpringSecurity和JWT。 2. 添加了顾客登录方法。 3. 调整了StatusCode类的代码。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,7 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   type-aliases-package: com.boot.ugo.entity
+
+# 请求白名单
+request:
+  white: /ugo/cus/hello,/ugo/cus/login,/ugo/test/**
