--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8888
 spring:
   application:
     name: ugo - a online shopping platform
@@ -13,6 +15,6 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   type-aliases-package: com.boot.ugo.entity
 
-# 请求白名单
+# SpringSecurity请求白名单
 request:
   white: /ugo/cus/hello,/ugo/cus/login,/ugo/test/**
