1. 拆分商品和商品分类 2. 新增分类包装类CategoryVo和商品与分类结合的包装类CategoryGoodsVo 3. 新增商品分类搜索和获取所有分类方法

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,4 @@ mybatis-plus:
 
 # SpringSecurity请求白名单
 request:
-  white: /ugo/cus/hello,/ugo/cus/login,/ugo/test/*,/ugo/goo/*
+  white: /ugo/cus/hello,/ugo/cus/login,/ugo/test/*,/ugo/goo/*,/ugo/cat/*
