--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,4 @@ mybatis-plus:
 
 # SpringSecurity请求白名单
 request:
-  white: /ugo/cus/hello,/ugo/cus/login,/ugo/test/*,/ugo/goo/*,/ugo/cat/*
+  white: /ugo/cus/hello,/ugo/cus/login,/ugo/cus/register,/ugo/test/*,/ugo/goo/*,/ugo/cat/*
